--- a/자료형이란.md
+++ b/자료형이란.md
@@ -1,6 +1,6 @@
 ### 자료형이란?
 
-변수에 저장할 수 있는 값의 종류1
+변수에 저장할 수 있는 값의 종류
 
 
 
@@ -26,3 +26,111 @@ console.log(g, typeof(g));
 typeof() 명령어로 변수의 타입을 확인할 수 있다.
 
 자바스크립트는 정수와 실수를 따로 구분하지 않고 모두 number 자료형으로  표현한다.
+
+
+
+> 지수표기법
+
+```javascript
+var 지수 = 1e-3; //0.001
+```
+
+자바스크립트는 64bit를 활용해 숫자를 표현한다.
+
+(이 범위를 벗어나면 동작은 하지만 정확도가 떨어진다.)
+
+prompt 로 입력받은 숫자는 String타입이다.
+
+(자동타입변환되서 계산되는 경우도 있다.)
+
+
+
+> 타입변환 (문자를 숫자로 변환)
+
+```javascript
+var height = prompt("키를 입력해주세요");
+console.log(height, typeof(height));
+var heightInt = parseInt(height); //parseInt 정수로변환
+console.log(heightInt, typeof(heightInt));
+var heightFloat = parseFloat(height); //parseFloat 소수로변환
+console.log(heightFloat, typeof(heightFloat));
+```
+
+문자에서 숫자로 타입변환할 때, 타입변환 후 prompt로 시작을 숫자+문자를 입력하면
+
+숫자가 정상적으로 출력이되고 타입은 number 이다.
+
+그런데 prompt에서 시작을 문자+숫자를 입력한 경우엔 
+
+NaN(Not a Number 숫자가 아닌 경우를 표현) 이 뜬다.
+
+
+
+> String 자료형 
+
+```javascript
+var a='문자열은 따옴표로 둘러싸면 됩니다.';
+var b="큰따옴표로도 문자열을 표현할 수 있습니다.";
+
+var c="큰따옴표 문자열에는 따옴표 '를 사용할 수 있습니다.";
+var d='따옴표 문자열에는 큰따옴표 "를 사용할 수 있습니다.';
+
+/* escape character */
+var e="따옴표를 쓰고 싶다면 \'이렇게\' 사용하면 됩니다. 마찬가지로 \"큰따옴표\"도 쓸 수 있습니다.";
+var f='따옴표를 쓰고 싶다면 \'이렇게\' 사용하면 됩니다. 마찬가지로 \"큰따옴표\"도 쓸 수 있습니다.';
+
+/* 역슬래시 5개출력됨 1개출력하고싶으면 \\ 두개를쓰면된다 쓰고싶은만큼 *2 */
+var g="\\\\\\\\\\ 문자를 쓰고 싶다면 역슬래시를 두번 씁니다."; 
+
+var h="문자열에서 줄바꿈을 하고 싶다면, \n 역슬래시n을 사용합니다.";
+
+var i=a+b;
+
+var j="abcde";
+```
+
+
+
+> 객체 Object
+
+객체란 속성property의 집합
+
+ex ) 한명의 사람을 나타내는 객체가 있다면 이 사람은 이름, 나이, 키 같은 정보가 
+
+있을 것이다. 이런 속성을 객체의 속성으로 등록해두고 변수처럼 접근해서 읽거나 
+
+쓸 수 있다.
+
+var person = {key : value, key : value}; //중괄호안에 속성명:값 , 콤마구분
+
+```javascript
+var gongU = {name : "공유", age : 39, height : 184};
+console.log("name : %s age : %d height : %d", gongU.name, gongU.age, gongU.height);
+console.log(gongU);
+gongU.name = "도깨비";
+gongU["age"] = 970;
+console.log("name : %s age : %d height : %d", gongU.name, gongU.age, gongU.height);
+console.log(gongU);
+```
+
+속성에 접근하는 법 2가지
+
+1. person.name
+
+2. person["name"]
+
+   ​
+
+> null 타입
+
+* undefined (타입도 undefined) 는 시스템에서 변수나 속성이 정의되지 않은 경우
+* null (Object 타입 null 인 빈 객체가 저장되어 있다는 뜻) 개발자가 의도적으로 비어있는 무의 상태를 표현하기 위해 사용
+
+```javascript
+var uninitialized_var;
+
+var obj = {x:1,y:2};
+
+var nullVar = null;
+```
+
