재귀 추가 공부 점화식, 피보나치수열, 다이나믹프로그래밍

--- a/재귀란?.md
+++ b/재귀란?.md
@@ -82,6 +82,74 @@ var y = fact(5); //5*4*3*2*1 120
 console.log("%s = %d", str, y);
 ```
 
+
+
+#### 점화식
+
+재귀나 다이나믹 프로그래밍이라는 걸로 문제를 풀때 유용하게 사용할 수 있는 수학공식.
+
+```javascript
+function diff(n){
+	if(n == 0){
+		return 1;
+	}
+	return 7 + diff(n - 1);
+}
+console.log(diff(0), diff(1), diff(2));
+```
+
+
+
+>  재귀로 피보나치 수열 구현
+
+```javascript
+function fibbo(n){
+	if (n === 0 || n === 1){
+		return 1;
+	}
+	return fibbo(n - 1) + fibbo(n - 2);
+}
+
+for (var i = 0; i < 40; i++){
+	console.log(fibbo(i));
+}
+```
+
+> 다이나믹프로그래밍 이전에 있었던걸 다시 꺼내쓰는것 = 메모이제이션
+
+```javascript
+//다이나믹프로그래밍 이전에 있었던걸 다시 꺼내쓰는것 = 메모이제이션
+var arr = [];
+for (var i = 0; i < 50; i++){
+	arr[i] = 0;
+}
+
+function fibbo2(n){
+	if (n === 0 || n === 1){
+		arr[n] = 1;
+		return 1;
+	}
+
+	//이미 계산을 해 본 경우
+	if(arr[n] !== 0){
+		return arr[n];
+	}else{
+    //처음 계산을 하는 경우
+		arr[n] = fibbo2(n - 1) + fibbo2(n - 2);
+		return arr[n];
+	}
+
+}
+
+for (var i = 0; i < 10; i++){
+	console.log(i, fibbo(i), fibbo2(i));
+}
+```
+
+
+
+
+
 > 도전과제! 하노이 타워를 애니메이션까지 구현
 
 ```javascript
